添加购买食物接口